%% PureSkin Clinic - Simplified conceptual class diagram (report version)
%% Patient = registers + appointments + store | Admin = dashboard only | Doctor = clinical workflow
%% Note: Production DB uses Users table with roles; this diagram matches your report structure.

classDiagram
    direction TB

    class Patient {
        +INT id PK
        +VARCHAR name
        +VARCHAR email
        +VARCHAR password
        +TINYINT email_verified
        +VARCHAR phone
        +DATE date_of_birth
        +VARCHAR address
        <<registers, books appointments, store>>
    }

    class Admin {
        +INT id PK
        +VARCHAR name
        +VARCHAR email
        +VARCHAR password
        +ENUM admin_role
        <<admin dashboard only>>
    }

    class Doctor {
        +INT id PK
        +VARCHAR name
        +VARCHAR email
        +VARCHAR specialization
        <<appointments and treatments>>
    }

    class MedicalRecord {
        +INT id PK
        +INT patient_id FK
        +VARCHAR skin_type
        +TEXT allergies
        +TEXT notes
    }

    class Appointment {
        +INT id PK
        +INT patient_id FK
        +INT doctor_id FK
        +DATE appointment_date
        +TIME appointment_time
        +ENUM treatment_category
        +ENUM status
    }

    class TreatmentSession {
        +INT id PK
        +INT appointment_id FK
        +DECIMAL session_price
        +DECIMAL amount_paid
        +TEXT notes
    }

    class Message {
        +INT id PK
        +INT sender_id
        +INT receiver_id
        +TEXT message
    }

    class Product {
        +INT id PK
        +VARCHAR name
        +ENUM category
        +DECIMAL price
        +INT stock
    }

    class Order {
        +INT id PK
        +INT patient_id FK
        +DECIMAL total_price
        +ENUM status
        +ENUM payment_status
    }

    class OrderItem {
        +INT id PK
        +INT order_id FK
        +INT product_id FK
        +INT quantity
        +DECIMAL price
    }

    class Review {
        +INT id PK
        +INT patient_id FK
        +INT appointment_id FK
        +TINYINT rating
        +ENUM status
    }

    class ProductStockAdjustment {
        +INT id PK
        +INT product_id FK
        +INT delta
        +INT admin_id FK
    }

    Patient "1" --> "0..1" MedicalRecord
    Patient "1" --> "*" Appointment : books
    Doctor "1" --> "*" Appointment : manages
    Appointment "1" --> "0..1" TreatmentSession
    Appointment "1" --> "0..1" Review
    Patient "1" --> "*" Order
    Order "1" --> "*" OrderItem
    Product "1" --> "*" OrderItem
    Patient "1" --> "*" Message
    Doctor "1" --> "*" Message
    Admin "1" --> "*" Product : manages
    Admin "1" --> "*" Order : manages
    Admin "1" --> "*" ProductStockAdjustment
    Product "1" --> "*" ProductStockAdjustment
